# apartment-hunter

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: criteria.example.yaml  criteria.yaml
scripts/: audit_scores.py  open_ui.bat  probe_rentalsca.py  run_hunter.bat
src/apartment_hunter/: alerter.py  db.py  dedupe.py  http_client.py  models.py  run.py  scoring.py  settings.py  web.py
src/apartment_hunter/scrapers/: base.py  craigslist.py  kijiji.py  rentals_ca.py  rentfaster.py
src/apartment_hunter/templates/: _card_status.html  _filters.html  _scrape_button.html  _star_button.html  _status_pill.html  base.html  config.html  index.html  listing.html  map.html
tests/: test_craigslist_parses_fixture.py  test_http_client_retry.py  test_kijiji_parses_fixture.py  test_rentals_ca_parses_fixture.py  test_rentfaster_parses_fixture.py  test_scoring.py
tests/fixtures/craigslist/: sample.html  sample_sapi.json
tests/fixtures/kijiji/: sample.html
tests/fixtures/rentals_ca/: sample.html
tests/fixtures/rentfaster/: sample.json
